--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -21,6 +21,9 @@
 @Synthwave-Sunset-4_3-rgba: rgb(69, 89, 163);
 @Synthwave-Sunset-4_4-rgba: rgba(85, 109, 200, 1);
 @Synthwave-Sunset-5-rgba: rgba(121, 152, 238, 1);
+@bs-background_0:#3F4D66;
+@bs-background_1:rgb(51.2, 126.4, 204);
+
 
 /* Darktooth */
 @dark_brown_0_hard: #1d2021;
@@ -38,11 +41,18 @@
 @dark_gray_2: #4e4e4e;
 @dark_gray_3: #626262;
 @dark_gray_4: #767676;
+@dark_gray_8: #d7d7d7;
 
 @medium_brown: #928374;
 @medium_gray: #8a8a8a;
 
+@light-gray_0: #F9F9F9;
+@light-gray_1: #bcbcbc;
+@light-gray_2: #a8a8a8;
+@light-gray_3: #949494;
+
 @bright_red: #fb4933;
+@bright_red_1: #F56C6C;
 @bright_green: #b8bb26;
 @bright_yellow: #fabd2f;
 @bright_blue: #83a598;
@@ -85,6 +95,7 @@
 @border_0: #3d3d3e;
 
 @text-color-brown_0: #a89984;
+@text-color-gray_0: #4B5675;
 
 body {
   font-family: @primary-font;
@@ -119,10 +130,78 @@ h6 {
   background-color: @dark_brown_4;
 }
 
+.bg-light-gray-0 {
+  background-color: @light-gray_0;
+}
+
+.bg-red-1 {
+  background-color: @bright_red_1;
+}
+
+.bg-sunset-4_2 {
+  background-color: @Synthwave-Sunset-4_2-rgba;
+}
+
+.bg-blue_0 {
+  background-color: @bs-background_0;
+}
+
+.bg-blue_1 {
+  background-color: @bs-background_1;
+}
+
 .border-color-0 {
   border-color: @border_0;
 }
 
 .tc-brown-0 {
   color: @text-color-brown_0;
+}
+
+.tc-gray-0 {
+  color: @text-color-gray_0;
+}
+
+.tc-dark-gray-1 {
+  color: @dark_gray_1;
+}
+.tc-dark-gray-2 {
+  color: @dark_gray_2;
+}
+.tc-dark-gray-3 {
+  color: @dark_gray_3;
+}
+.tc-dark-gray-4 {
+  color: @dark_gray_4;
+}
+.tc-dark-gray-8 {
+  color: @dark_gray_8;
+}
+
+.f-w-100{
+  font-weight: 100;
+}
+.f-w-200{
+  font-weight: 200;
+}
+.f-w-300{
+  font-weight: 300;
+}
+.f-w-400{
+  font-weight: 400;
+}
+.f-w-500{
+  font-weight: 500;
+}
+.f-w-600{
+  font-weight: 600;
+}
+.f-w-700{
+  font-weight: 700;
+}
+.f-w-800{
+  font-weight: 800;
+}
+.f-w-900{
+  font-weight: 900;
 }
