- добавил классы для работы с флексами - в глобал класс добавил новый стиль - добавил wow-card - admin-menu готовится к удалению - wowtreemenu - будущий кастомный компонент дерева - изменил шаблон admin, добавил стилей и пример отображения

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -178,6 +178,11 @@ h6 {
   color: @dark_gray_8;
 }
 
+.tc-light-gray-0{
+  color: #E8EDF7;
+}
+
+/* ширина шрифта */
 .f-w-100{
   font-weight: 100;
 }
