Переработаны компоненты меню администратора: - Добавлены новые классы выравнивания в flexclasses.less для лучшего управления макетом. - Добавлены функции всплывающих подсказок в компонентах menuBtn, MenuLabelGroup и MenuTreeNode для улучшения взаимодействия с пользователем. - Обновлены MenuInterface и MenuNodeInterface, в которые добавлены всплывающие подсказки и свойства функций. - Удален устаревший компонент Admin-menu.vue. - Изменен admin.vue, чтобы использовать новый menuObject для динамического отображения меню.

--- a/assets/less/flexclasses.less
+++ b/assets/less/flexclasses.less
@@ -19,6 +19,30 @@
   flex-wrap: nowrap;
 }
 
+.fc-align-content-start { /* Align Content: Start */
+  align-content: flex-start;
+}
+
+.fc-align-content-center { /* Align Content: Center */
+  align-content: center;
+}
+
+.fc-align-content-end { /* Align Content: End */
+  align-content: flex-end;
+}
+
+.fc-align-content-space-b { /* Align Content: Space Between */
+  align-content: space-between;
+}
+
+.fc-align-content-space-a { /* Align Content: Space Around */
+  align-content: space-around;
+}
+
+.fc-align-content-stretch { /* Align Content: Stretch */
+  align-content: stretch;
+}
+
 .fc-justify-start { /* Justify Content: Start */
   justify-content: flex-start;
 }
