--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -134,6 +134,10 @@ h6 {
   background-color: @light-gray_0;
 }
 
+.bg-light-gray-1 {
+  background-color: @light-gray_1;
+}
+
 .bg-red-1 {
   background-color: @bright_red_1;
 }
@@ -148,6 +152,10 @@ h6 {
 
 .bg-blue_1 {
   background-color: @bs-background_1;
+}
+
+.bg-dark_gray_8 {
+  background-color: @dark_gray_8;
 }
 
 .border-color-0 {
@@ -180,6 +188,10 @@ h6 {
 
 .tc-light-gray-0{
   color: #E8EDF7;
+}
+
+.tc-muted_blue{
+  color: @muted_blue;
 }
 
 /* ширина шрифта */
