--- a/assets/less/fonts.less
+++ b/assets/less/fonts.less
@@ -21,6 +21,14 @@
   font-weight: 700;
 }
 
-.user-select-none{
+.user-select-none {
   user-select: none;
+}
+
+.font-text-transform-uppercase {
+  text-transform: uppercase;
+}
+
+.padding-5-5 {
+  padding: 5px 5px;
 }
