--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -240,6 +240,10 @@ h6 {
   font-weight: 900;
 }
 
+.wow-w-100 {
+  width: 100%;
+}
+
 /* scroll */
 ::-webkit-scrollbar {
   width: 10px;
@@ -259,6 +263,13 @@ h6 {
 }
 
 .wow-dark {
+
+  .el-input .el-input__count .el-input__count-inner {
+    background: #d91a1a00;
+    display: inline-block;
+    line-height: normal;
+    padding-left: 8px
+  }
 
   .el-tabs__item {
     align-items: center;
@@ -285,6 +296,7 @@ h6 {
     position: absolute;
     width: 100%;
   }
+
 
   /*   .el-tabs--card>.el-tabs__header .el-tabs__item.is-active{
     border-bottom-color: #af3a03;
