Обновлены стили и компоненты интерфейса администратора
- Добавлены новые классы для цветового оформления текста в global.less.
- Обновлен Wow-col.vue для динамического определения ширины экрана.
- Изменен макет admin.vue для улучшения структуры и добавления слотов.
- Расширен функционал страницы admin/index.vue с новыми карточками и прогресс-барами.
- Обновлен menuObject.js с новыми элементами меню и иконками для улучшения навигации.

Эти изменения направлены на улучшение пользовательского интерфейса и взаимодействия на страницах администратора.

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -203,6 +203,14 @@ h6 {
   color: @muted_blue;
 }
 
+.tc-bright_red{
+  color: #fb4933;
+}
+
+.tc-background_0{
+  color: @bs-background_0;;
+}
+
 /* ширина шрифта */
 .f-w-100 {
   font-weight: 100;
