Обновлены компоненты и стили интерфейса
- Добавлен элемент <el-config-provider> с локализацией на русский язык в app.vue.
- Изменен триггер для всплывающего окна в Wow-bell.vue с "click" на "hover".
- Упрощен макет admin.vue, заменив текстовые элементы на компоненты wow-userIcon.
- Обновлены карточки в admin/index.vue для улучшения взаимодействия и добавления функционала переключения режима.
- Исправлены правила валидации в CreateUser.vue и CreateUserST.vue для полей ввода.
- Добавлены новые стили в global.less для улучшения визуального восприятия.

Эти изменения направлены на улучшение пользовательского интерфейса и взаимодействия на страницах приложения.

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -203,12 +203,13 @@ h6 {
   color: @muted_blue;
 }
 
-.tc-bright_red{
+.tc-bright_red {
   color: #fb4933;
 }
 
-.tc-background_0{
-  color: @bs-background_0;;
+.tc-background_0 {
+  color: @bs-background_0;
+  ;
 }
 
 /* ширина шрифта */
@@ -268,6 +269,10 @@ h6 {
   /* Цвет ползунка скрола */
   border-radius: 20px;
   /* Закругление углов ползунка */
+}
+
+.cur-pointer {
+  cursor: pointer;
 }
 
 .wow-dark {
