fear: - добавил новые стили selectv2 для темной темы - добавил в nuxt.config глобальный урл - добавил авторизацию пользователя и регистрацию пользователя - добавил страницу редактирования профиля пользователя - добавил карточек на рабочий стол пользователя

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -277,6 +277,19 @@ h6 {
 
 .wow-dark {
 
+  .el-select {
+    --el-border-color: #767676;
+    --el-select-disabled-border: #767676;
+  }
+  .el-select__placeholder{
+    color: #a8abb2;
+  }
+  .el-select__wrapper {
+    background-color: #ffffff00;
+    border-radius: #767676;
+  }
+
+
   .el-input .el-input__count .el-input__count-inner {
     background: #d91a1a00;
     display: inline-block;
