добавил каптчу при регистрации, добавил условия по отображению списка с снт, добавил чуток стилей для темной темы

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -280,6 +280,7 @@ h6 {
   .el-select {
     --el-border-color: #767676;
     --el-select-disabled-border: #767676;
+    --el-select-multiple-input-color: #a8abb2;
   }
   .el-select__placeholder{
     color: #a8abb2;
