refactor: реструктуризация интерфейсов и обновление диалогового окна решения
- Перенесены интерфейсы из хранилища в специальный каталог интерфейсов
- Обновлен компонент диалога решений для работы с новым интерфейсом SolutionEdit
- Изменены правила маршрута в конфигурации Nuxt, чтобы отключить SSR для маршрутов администратора и пользователя
- Добавлены новые цветовые переменные в глобальных стилях Less
- Обновлены пути импорта и ссылки на типы в нескольких компонентах

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -42,6 +42,9 @@
 @dark_gray_2: #4e4e4e;
 @dark_gray_3: #626262;
 @dark_gray_4: #767676;
+@dark_gray_5: #838383;
+@dark_gray_6: #9b9b9b;
+@dark_gray_7: #adadad;
 @dark_gray_8: #d7d7d7;
 
 @medium_brown: #928374;
@@ -140,6 +143,14 @@ h6 {
   background-color: @light-gray_1;
 }
 
+.bg-light-gray-2 {
+  background-color: @light-gray_2;
+}
+
+.bg-light-gray-3 {
+  background-color: @light-gray_3;
+}
+
 .bg-red-1 {
   background-color: @bright_red_1;
 }
@@ -191,6 +202,18 @@ h6 {
 
 .tc-dark-gray-4 {
   color: @dark_gray_4;
+}
+
+.tc-dark-gray-5 {
+  color: @dark_gray_5;
+}
+
+.tc-dark-gray-6 {
+  color: @dark_gray_6;
+}
+
+.tc-dark-gray-7 {
+  color: @dark_gray_7;
 }
 
 .tc-dark-gray-8 {
