feat: добавление поддержки moment.js, добавление его в глобальную область и обновление интерфейса solutionedit для работы с новыми типами данных, изменил solution-dialog, добавил таблицу для просмотра всех текущих собственников и изменил поля для редактирования

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -102,6 +102,8 @@
 @text-color-brown_0: #a89984;
 @text-color-gray_0: #4B5675;
 
+@text-color-heading-blue: #404D66;
+
 body {
   font-family: @primary-font;
 }
@@ -115,6 +117,10 @@ h6 {
   font-family: @secondary-font;
 }
 
+.tc-heading-blue {
+  color: @bs-background_1;
+}
+
 .bg-dark-brown-0 {
   background-color: @dark_brown_0;
 }
@@ -123,12 +129,20 @@ h6 {
   background-color: @dark_brown_1;
 }
 
+.tc-dark-brown-1 {
+  color: @dark_brown_1;
+}
+
 .bg-dark-brown-2 {
   background-color: @dark_brown_2;
 }
 
 .bg-dark-brown-3 {
   background-color: @dark_brown_3;
+}
+
+.tc-dark-brown-3 {
+  color: @dark_brown_3;
 }
 
 .bg-dark-brown-4 {
