feat: добавил стиль для линков телефона и емейла - wow-card добавил стили и пропс для изменения положения футера - добавил страничку для отображения участников СТ и открытия подробной информации о нем

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -437,4 +437,11 @@ h6 {
     color: @light-gray_1;
   }
 
+
+}
+
+.phone-link {
+  text-decoration: none;
+  color: inherit;
+  margin-left: 5px;
 }
