feat: обновление компонентов и интерфейсов для управления участками - изменен цвет фона в global.less - обновлен заголовок диалога добавления/редактирования участка в Land-add-edit-dialog.vue - добавлено новое свойство districtTitle в интерфейс Area - улучшено отображение информации о участке на страницах управления участками - изменены ссылки на компоненты в страницах администрирования

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -22,7 +22,7 @@
 @Synthwave-Sunset-4_4-rgba: rgba(85, 109, 200, 1);
 @Synthwave-Sunset-5-rgba: rgba(121, 152, 238, 1);
 @bs-background_0: #3F4D66;
-@bs-background_1: rgb(51.2, 126.4, 204);
+@bs-background_1: #337ecc;
 
 
 /* Darktooth */
