feat: обновление компонентов и интерфейсов для управления участниками и районами - изменен стиль прокрутки в global.less - добавлено свойство overflow-y для элементов с прокруткой в Wow-panel.vue и admin.vue - обновлены заголовки и свойства форм в District-add-edit-dialog.vue и Person-add-edit-dialog.vue - улучшено отображение информации о участниках на страницах управления участниками - удален устаревший компонент Person-info-dialog.vue - исправлены ссылки на компоненты в страницах администрирования

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -297,7 +297,7 @@ h6 {
 }
 
 /* scroll */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 10px;
 }
 
@@ -306,9 +306,9 @@ h6 {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #7c6f647c;
+  background: #f56c6ca9;
   border-radius: 20px;
-} */
+}
 
 
 .cur-pointer {
