feat: обновление функционала управления участниками и районами - добавлена пагинация для списка участников в компоненте participant/index.vue - обновлено отображение данных участников с использованием пагинации - добавлены обработчики для изменения текущей страницы и размера страницы - улучшено взаимодействие с пользователем при навигации по списку участников - обновлены компоненты для управления участками и районами с учетом новых интерфейсов

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -315,6 +315,15 @@ h6 {
   cursor: pointer;
 }
 
+.a-txt-dec-none {
+  text-decoration: none;
+}
+
+.no-select {
+  user-select: none;
+}
+
+
 .wow-dark {
 
   /* закрашиваем фон автозаполнения */
