--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -185,6 +185,9 @@ h6 {
   background-color: @dark_gray_8;
 }
 
+.tc-bright-red-1{
+  color: @bright_red_1;
+}
 
 .tc-dark_gray_0_soft {
   background-color: @dark_gray_0_soft;
