feat: добавил функционал для загрузки информации о пользователе при аутентификации и обновил интерфейсы для голосования, включая отображение статуса голосования и улучшения в компонентах

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -252,6 +252,9 @@ h6 {
 .tc-bright_red {
   color: #fb4933;
 }
+.tc-bright_green {
+  color: @bright_aqua;
+}
 
 .tc-background_0 {
   color: @bs-background_0;
